[package]
name = "activities"
version = "0.1.0"
authors = ["Timilehin Bello<>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/mylib.rs"

[dependencies]
chrono = "*"
thiserror = "*"
crossbeam-channel = "*"
colored = "*"
parking_lot = "*"
